# bwbar

./: MCONFIG.in  Makefile  README  aclocal.m4  bwbar.c  configure  configure.in
debian/: README.Debian  bwbar.8  changelog  control  copyright  prerm
debian.new/: changelog  control  dirs  manpages  postinst  postrm  preinst  rules
debian.new/otherfiles/: bwbar  install-bwbar
debian.new/patches/: 030_newunits.diff
debian/otherfiles/: bwbar  bwbar-default
debian/patches/: 010_directory_option.diff  020_proc_net_2.6.x_fix.diff
